sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:5: error: not found: value estSelectionne
while(estSelectionne()=false){
      ^BasicPancake:11: error: not found: value crepelapluslarge
		if(crepelapluslarge<getRayonCrepe(rang))
                   ^BasicPancake:13: error: not found: value crepelapluslarge
		crepelapluslarge=rang
                ^BasicPancake:15: error: not found: value rang
	retourne(rang) 
                 ^